# python-calculator

./: divide.py  setup.cfg
pythoncalculator/: __init__.py  divide.py
tests/: test_divide.py
